Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,20 @@
     doi     = {10.1080/07421222.2003.11045748}
 }
 
+@article{DeloneMcLean1992ISSuccess,
+   author = {William H. DeLone and Ephraim R. McLean},
+   doi = {10.1287/isre.3.1.60},
+   issn = {15265536},
+   issue = {1},
+   journal = {Information Systems Research},
+   keywords = {Information systems assessment,Information systems success,Measurement},
+   pages = {60-95},
+   publisher = {INFORMS Inst.for Operations Res.and the Management Sciences},
+   title = {Information systems success: The quest for the dependent variable},
+   volume = {3},
+   year = {1992}
+}
+
 @inproceedings{Sahin2024LLM_proceedings,
     author    = {{\c{S}}ahin, G{\"u}rkan and Varol, Karya and Pak, Burcu Kuleli},
     title     = {{LLM} and {RAG}-based question answering assistant for enterprise knowledge management},
@@ -52,7 +66,7 @@
 @online{GoogleCloudRAG,
     author  = {{Google Cloud}},
     title   = {What is retrieval-augmented generation ({RAG})?},
-    url     = {https://cloud.google.com/use-cases/retrieval-augmented-generation?hl=en},
+    url     = {https://cloud.google.com/use-cases/retrieval-augmented-generation},
     urldate = {2025-07-31}
 }
 
@@ -118,11 +132,12 @@
     doi     = {10.4018/jkm.2006070104}
 }
 
-@book{Davenport,
-    author    = {Davenport, Thomas H. and Prusak, Laurence},
-    year      = {1998},
-    title     = {Working knowledge: How organizations manage what they know},
-    publisher = {Harvard Business School Press}
+@article{Davenport1998,
+   author = {Thomas H Davenport},
+   doi = {10.1145/348772.348775},
+   title = {Working Knowledge: How Organizations Manage What They Know},
+   url = {http://www.acm.org/ubiquity/book/t_davenport_1.html},
+   year = {1998}
 }
 
 @article{Jennex2006WhatIsKM,
@@ -135,15 +150,31 @@
     pages   = {i--iv}
 }
 
-@online{MinskyBritannica,
-    author    = {Dennis, Michael Aaron},
-    year      = {2025},
-    month     = {mar},
-    day       = {5},
-    title     = {Marvin {Minsky}},
-    publisher = {Encyclopedia Britannica},
-    url       = {https://www.britannica.com/biography/Marvin-Minsky},
-    urldate   = {2025-08-01}
+@article{Alavi2001,
+   author = {Maryam Alavi and Dorothy E. Leidner},
+   doi = {10.2307/3250961},
+   issn = {02767783},
+   issue = {1},
+   journal = {MIS Quarterly: Management Information Systems},
+   pages = {107-136},
+   publisher = {University of Minnesota},
+   title = {Review: Knowledge management and knowledge management systems: Conceptual foundations and research issues},
+   volume = {25},
+   year = {2001}
+}
+@online{dennis:2025,
+  author    = {Dennis, Michael Aaron},
+  year      = {2025},
+  title     = {Marvin {Minsky}},
+  publisher = {Encyclopedia Britannica},
+  urldate   = {2025-08-01},
+  url       = {https://www.britannica.com/biography/Marvin-Minsky},
+}
+
+@misc{minsky:original,
+  author = {Minsky, Marvin},
+  year   = {1966},
+  title  = {Title of Original Work if Known},
 }
 
 @article{Lund2023,
@@ -230,13 +261,6 @@
     urldate = {2025-08-05}
 }
 
-@article{Chan2024,
-    author  = {Chan, Chi-Min and Xu, Chunpu and Yuan, Ruibin and Luo, Hongyin and Xue, Wei and Guo, Yike and Fu, Jie},
-    title   = {{RQ-RAG}: Learning to refine queries for retrieval augmented generation},
-    journal = {arXiv preprint arXiv:2404.00610},
-    year    = {2024}
-}
-
 @article{Setty2024,
     author  = {Setty, Spurthi and Thakkar, Harsh and Lee, Alyssa and Chung, Eden and Vidra, Natan},
     title   = {Improving retrieval for {RAG} based question answering models on financial documents},
@@ -304,3 +328,65 @@
     pages   = {45--77},
     doi     = {10.2753/MIS0742-1222240302}
 }
+
+@article{Ammann2025,
+   author = {Paul J. L. Ammann and Jonas Golde and Alan Akbik},
+   month = {7},
+   title = {Question Decomposition for Retrieval-Augmented Generation},
+   url = {http://arxiv.org/abs/2507.00355},
+   year = {2025}
+}
+
+@article{Huimin,
+    author = {Huimin, Zhang and Ahmad, Abdul and Abdul Kadir, Mohd Razilan},
+    year = {2024},
+    month = {06},
+    pages = {},
+    title = {The Impact of MOOC Platform Quality on the Independent Learning Ability of Higher Education Students: A Critical Review of the Literature},
+    volume = {14},
+    journal = {International Journal of Academic Research in Business and Social Sciences},
+    doi = {10.6007/IJARBSS/v14-i6/21737}
+}
+@article{Naveed2024,
+    abstract = {Large Language Models (LLMs) have recently demonstrated remarkable capabilities in natural language processing tasks and beyond. This success of LLMs has led to a large influx of research contributions in this direction. These works encompass diverse topics such as architectural innovations, better training strategies, context length improvements, fine-tuning, multi-modal LLMs, robotics, datasets, benchmarking, efficiency, and more. With the rapid development of techniques and regular breakthroughs in LLM research, it has become considerably challenging to perceive the bigger picture of the advances in this direction. Considering the rapidly emerging plethora of literature on LLMs, it is imperative that the research community is able to benefit from a concise yet comprehensive overview of the recent developments in this field. This article provides an overview of the existing literature on a broad range of LLM-related concepts. Our self-contained comprehensive overview of LLMs discusses relevant background concepts along with covering the advanced topics at the frontier of research in LLMs. This review article is intended to not only provide a systematic survey but also a quick comprehensive reference for the researchers and practitioners to draw insights from extensive informative summaries of the existing works to advance the LLM research.},
+    author = {Humza Naveed and Asad Ullah Khan and Shi Qiu and Muhammad Saqib and Saeed Anwar and Muhammad Usman and Naveed Akhtar and Nick Barnes and Ajmal Mian},
+    month = {10},
+    title = {A Comprehensive Overview of Large Language Models},
+    url = {http://arxiv.org/abs/2307.06435},
+    year = {2024}
+}
+
+@online{vuejs,
+  author = {Evan You},
+  title = {Vue.js - The Progressive JavaScript Framework},
+  year = {2014-2025},
+  url = {https://vuejs.org/},
+  urldate = {2025-08-07}
+}
+
+@online{googlecloudscheduler,
+  author = {Google Cloud},
+  title = {About Cloud Scheduler | Cloud Scheduler Documentation - Google Cloud},
+  year = {2025},
+  url = {https://cloud.google.com/scheduler/docs/overview},
+  urldate = {2025-08-07}
+}
+
+@online{apache_echarts,
+  author = {{The Apache Software Foundation}},
+  title = {Apache ECharts},
+  year = {2017-2025},
+  url = {https://echarts.apache.org/en/index.html},
+  urldate = {2025-08-07}
+}
+
+@article{Malzer2021,
+   abstract = {HDBSCAN is a density-based clustering algorithm that constructs a cluster hierarchy tree and then uses a specific stability measure to extract flat clusters from the tree. We show how the application of an additional threshold value can result in a combination of DBSCAN* and HDBSCAN clusters, and demonstrate potential benefits of this hybrid approach when clustering data of variable densities. In particular, our approach is useful in scenarios where we require a low minimum cluster size but want to avoid an abundance of micro-clusters in high-density regions. The method can directly be applied to HDBSCAN's tree of cluster candidates and does not require any modifications to the hierarchy itself. It can easily be integrated as an addition to existing HDBSCAN implementations.},
+   author = {Claudia Malzer and Marcus Baum},
+   doi = {10.1109/MFI49285.2020.9235263},
+   month = {1},
+   title = {A Hybrid Approach To Hierarchical Density-based Cluster Selection},
+   url = {http://arxiv.org/abs/1911.02282 http://dx.doi.org/10.1109/MFI49285.2020.9235263},
+   year = {2021}
+}
+
