Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -243,7 +243,7 @@ UMAP & Uniform Manifold Approximation and Projection\\
 \pagenumbering{arabic}
 
 \chapter{Introduction}
-ChatGPT reached 1 million users within 5 days after its launch in 2022 which was only exceeded by Threads in 2023 \parencite{Brandt2023}. Today ChatGPT provides benefits for 800 million weekly users \parencite{Huber2025} and thus has become an established Generative AI (GenAI) tool. GenAI bares high potential not only for the private sector but also for the modern business world. Projections underscore this, suggesting that GenAI could increase Germany's GDP by up to \EUR{585} billion by 2040 \parencite[p.~12]{McKinsey2023}. Furthermore for enterprise applications, \textbf{Retrieval-Augmented Generation (RAG)} has emerged as a particularly suitable technology by connecting large language models (LLMs) to company-specific proprietary knowledge bases  \parencite[p.~9459]{Lewis2020}. Connecting and bounding LLMs to proprietary knowledge bases not only enables them to access up-to-date company data \parencite{GoogleCloudRAG} but also enhances transparency and reduces the likelihood of hallucinations, as the company data serves as the ground truth  \parencite[p.~9469]{Lewis2020}.
+ChatGPT reached 1 million users within 5 days after its launch in 2022 which was only exceeded by Threads in 2023 \parencite{Brandt2023}. Today ChatGPT provides benefits for 800 million weekly users \parencite{Huber2025} and thus has become an established Generative AI (GenAI) tool. GenAI bares high potential not only for the private sector but also for the modern business world. Projections underscore this, suggesting that GenAI could increase Germany's GDP by up to €585 billion by 2040 \parencite[p.~12]{McKinsey2023}. Furthermore for enterprise applications, \textbf{Retrieval-Augmented Generation (RAG)} has emerged as a particularly suitable technology by connecting large language models (LLMs) to company-specific proprietary knowledge bases  \parencite[p.~9459]{Lewis2020}. Connecting and bounding LLMs to proprietary knowledge bases not only enables them to access up-to-date company data \parencite{GoogleCloudRAG} but also enhances transparency and reduces the likelihood of hallucinations, as the company data serves as the ground truth  \parencite[p.~9469]{Lewis2020}.
 
 However, the success of enterprise RAG applications typically requires some effort, including the use of specialized RAG pipelines or connecting various APIs to the RAG system, to implement them effectively \parencite[pp.~5--7]{Bruckhaus2024RAG}. Common failure points include the system failing to provide an answer even though the information is available, generating a false answer by misinterpreting context or returning an incomplete response \parencite[p.~4]{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. As organizations invest in and deploy these powerful but complex systems, a critical management challenge arises: How can the success of a GenAI application be measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
 
