Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -137,7 +137,7 @@
     journal = {International Journal of Knowledge Management},
     volume  = {2},
     number  = {1},
-    pages   = {i--iv}
+    pages   = {!--%}
 }
 
 @article{Alavi2001,
@@ -179,13 +179,15 @@
 }
 
 @inproceedings{Lewis2020,
-    author    = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
-    title     = {Retrieval-augmented generation for knowledge-intensive {NLP} tasks},
-    booktitle = {Advances in Neural Information Processing Systems 33},
-    editor    = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and Lin, H.},
-    pages     = {9459--9474},
-    year      = {2020},
-    publisher = {Curran Associates, Inc.}
+     author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K\"{u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt\"{a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
+     booktitle = {Advances in Neural Information Processing Systems},
+     editor = {H. Larochelle and M. Ranzato and R. Hadsell and M.F. Balcan and H. Lin},
+     pages = {9459--9474},
+     publisher = {Curran Associates, Inc.},
+     title = {Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
+     url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf},
+     volume = {33},
+     year = {2020}
 }
 
 @online{AWS_RAG,
@@ -380,3 +382,37 @@
    year = {2021}
 }
 
+@online{icon1,
+  title        = {Cloud Scheduler SVG Vector},
+  organization = {SVG Repo},
+  url          = {https://www.svgrepo.com/svg/375384/cloud-scheduler},
+  urldate      = {2025-08-08}
+}
+
+@online{icon2,
+  title        = {Google BigQuery Logo},
+  organization = {Worldvectorlogo},
+  url          = {https://worldvectorlogo.com/logo/google-bigquery-logo-1},
+  urldate      = {2025-08-08}
+}
+
+@online{icon3,
+  title        = {User SVG Vector},
+  organization = {SVG Repo},
+  url          = {https://www.svgrepo.com/svg/535711/user},
+  urldate      = {2025-08-08}
+}
+
+@online{icon4,
+  title        = {Google Cloud Run SVG Vector},
+  organization = {SVG Repo},
+  url          = {https://www.svgrepo.com/svg/353807/google-cloud-run},
+  urldate      = {2025-08-08}
+}
+
+@online{icon5,
+  title        = {Vue.js Icon},
+  organization = {TechIcons},
+  url          = {https://techicons.dev/icons/vuejs},
+  urldate      = {2025-08-08}
+}
