--- a/references.bib
+++ b/references.bib
@@ -10,17 +10,17 @@
 }
 
 @article{DeloneMcLean1992ISSuccess,
-   author = {William H. DeLone and Ephraim R. McLean},
-   doi = {10.1287/isre.3.1.60},
-   issn = {15265536},
-   issue = {1},
-   journal = {Information Systems Research},
-   keywords = {Information systems assessment,Information systems success,Measurement},
-   pages = {60-95},
-   publisher = {INFORMS Inst.for Operations Res.and the Management Sciences},
-   title = {Information systems success: The quest for the dependent variable},
-   volume = {3},
-   year = {1992}
+    author = {William H. DeLone and Ephraim R. McLean},
+    doi = {10.1287/isre.3.1.60},
+    issn = {15265536},
+    issue = {1},
+    journal = {Information Systems Research},
+    keywords = {Information systems assessment,Information systems success,Measurement},
+    pages = {60--95},
+    publisher = {INFORMS Inst.for Operations Res.and the Management Sciences},
+    title = {Information systems success: The quest for the dependent variable},
+    volume = {3},
+    year = {1992}
 }
 
 @online{Brandt2023,
@@ -45,7 +45,7 @@
 }
 
 @online{McKinsey2023,
-    author    = {{McKinsey \& Company}},
+    author    = {{McKinsey {\&} Company}},
     year      = {2023},
     month     = {nov},
     title     = {{GenAI's} implications for {Germany's} labor market},
@@ -123,11 +123,11 @@
 }
 
 @article{Davenport1998,
-   author = {Thomas H Davenport},
-   doi = {10.1145/348772.348775},
-   title = {Working Knowledge: How Organizations Manage What They Know},
-   url = {http://www.acm.org/ubiquity/book/t_davenport_1.html},
-   year = {1998}
+    author = {Thomas H Davenport},
+    doi = {10.1145/348772.348775},
+    title = {Working Knowledge: How Organizations Manage What They Know},
+    url = {http://www.acm.org/ubiquity/book/t_davenport_1.html},
+    year = {1998}
 }
 
 @article{Jennex2006WhatIsKM,
@@ -136,22 +136,22 @@
     title   = {What is knowledge management?},
     journal = {International Journal of Knowledge Management},
     volume  = {2},
-    number  = {1},
-    pages   = {!--%}
+    number  = {1}
 }
 
 @article{Alavi2001,
-   author = {Maryam Alavi and Dorothy E. Leidner},
-   doi = {10.2307/3250961},
-   issn = {02767783},
-   issue = {1},
-   journal = {MIS Quarterly: Management Information Systems},
-   pages = {107-136},
-   publisher = {University of Minnesota},
-   title = {Review: Knowledge management and knowledge management systems: Conceptual foundations and research issues},
-   volume = {25},
-   year = {2001}
+    author = {Maryam Alavi and Dorothy E. Leidner},
+    doi = {10.2307/3250961},
+    issn = {02767783},
+    issue = {1},
+    journal = {MIS Quarterly: Management Information Systems},
+    pages = {107--136},
+    publisher = {University of Minnesota},
+    title = {Review: Knowledge management and knowledge management systems: Conceptual foundations and research issues},
+    volume = {25},
+    year = {2001}
 }
+
 @online{dennis:2025,
   author    = {Dennis, Michael Aaron},
   year      = {2025},
@@ -179,15 +179,15 @@
 }
 
 @inproceedings{Lewis2020,
-     author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K\"{u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt\"{a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
-     booktitle = {Advances in Neural Information Processing Systems},
-     editor = {H. Larochelle and M. Ranzato and R. Hadsell and M.F. Balcan and H. Lin},
-     pages = {9459--9474},
-     publisher = {Curran Associates, Inc.},
-     title = {Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
-     url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf},
-     volume = {33},
-     year = {2020}
+      author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K\"{u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt\"{a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
+      booktitle = {Advances in Neural Information Processing Systems},
+      editor = {H. Larochelle and M. Ranzato and R. Hadsell and M.F. Balcan and H. Lin},
+      pages = {9459--9474},
+      publisher = {Curran Associates, Inc.},
+      title = {Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
+      url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf},
+      volume = {33},
+      year = {2020}
 }
 
 @online{AWS_RAG,
@@ -197,7 +197,7 @@
     urldate   = {2025-07-31}
 }
 
-@online{NStarX_Inc._2025,
+@online{NStarX_Inc_2025,
     author  = {{NStarX Inc.}},
     title   = {{The \$2.5 million question: Why data quality makes or breaks your enterprise RAG system}},
     url     = {https://nstarxinc.com/blog/the-2-5-million-question-why-data-quality-makes-or-breaks-your-enterprise-rag-system/},
@@ -322,11 +322,11 @@
 }
 
 @article{Ammann2025,
-   author = {Paul J. L. Ammann and Jonas Golde and Alan Akbik},
-   month = {7},
-   title = {Question Decomposition for Retrieval-Augmented Generation},
-   url = {http://arxiv.org/abs/2507.00355},
-   year = {2025}
+    author = {Paul J. L. Ammann and Jonas Golde and Alan Akbik},
+    month = {7},
+    title = {Question Decomposition for Retrieval-Augmented Generation},
+    url = {http://arxiv.org/abs/2507.00355},
+    year = {2025}
 }
 
 @article{Huimin,
@@ -340,8 +340,6 @@
     doi = {10.6007/IJARBSS/v14-i6/21737}
 }
 @article{Naveed2024,
-    abstract = {Large Language Models (LLMs) have recently demonstrated remarkable capabilities in natural language processing tasks and beyond. This success of LLMs has led to a large influx of research contributions in this direction. These works encompass diverse topics such as architectural innovations, better training strategies, context length improvements, fine-tuning, multi-modal LLMs, robotics, datasets, benchmarking, efficiency, and more. With the rapid development of techniques and regular breakthroughs in LLM research, it has become considerably challenging to perceive the bigger picture of the advances in this direction. Considering the rapidly emerging plethora of literature on LLMs, it is imperative that the research community is able to benefit from a concise yet comprehensive overview of the recent developments in this field. This article provides an overview of the existing literature on a broad range of LLM-related concepts. Our self-contained comprehensive overview of LLMs discusses relevant background concepts along with covering the advanced topics at the frontier of research in LLMs. This review article is intended to not only provide a systematic survey but also a quick comprehensive reference for the researchers and practitioners to draw insights from extensive informative summaries of the existing works to advance the LLM research.},
-    author = {Humza Naveed and Asad Ullah Khan and Shi Qiu and Muhammad Saqib and Saeed Anwar and Muhammad Usman and Naveed Akhtar and Nick Barnes and Ajmal Mian},
     month = {10},
     title = {A Comprehensive Overview of Large Language Models},
     url = {http://arxiv.org/abs/2307.06435},
@@ -373,13 +371,12 @@
 }
 
 @article{Malzer2021,
-   abstract = {HDBSCAN is a density-based clustering algorithm that constructs a cluster hierarchy tree and then uses a specific stability measure to extract flat clusters from the tree. We show how the application of an additional threshold value can result in a combination of DBSCAN* and HDBSCAN clusters, and demonstrate potential benefits of this hybrid approach when clustering data of variable densities. In particular, our approach is useful in scenarios where we require a low minimum cluster size but want to avoid an abundance of micro-clusters in high-density regions. The method can directly be applied to HDBSCAN's tree of cluster candidates and does not require any modifications to the hierarchy itself. It can easily be integrated as an addition to existing HDBSCAN implementations.},
-   author = {Claudia Malzer and Marcus Baum},
-   doi = {10.1109/MFI49285.2020.9235263},
-   month = {1},
-   title = {A Hybrid Approach To Hierarchical Density-based Cluster Selection},
-   url = {http://arxiv.org/abs/1911.02282 http://dx.doi.org/10.1109/MFI49285.2020.9235263},
-   year = {2021}
+    author = {Claudia Malzer and Marcus Baum},
+    doi = {10.1109/MFI49285.2020.9235263},
+    month = {1},
+    title = {A Hybrid Approach To Hierarchical Density-based Cluster Selection},
+    url = {http://arxiv.org/abs/1911.02282 http://dx.doi.org/10.1109/MFI49285.2020.9235263},
+    year = {2021}
 }
 
 @online{icon1,
