Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -134,6 +134,7 @@
 \newcommand*{\FeatureTrue}{\ding{52}}
 \newcommand*{\FeatureFalse}{\ding{56}}
 \usepackage{hyperref}
+\usepackage{xurl}
 
 \makeglossaries{}
 
